--- a/css/style_large.css
+++ b/css/style_large.css
@@ -81,6 +81,9 @@ main {
 
 #big-image {
   margin-bottom: 50px;
+  width: 700px;
+  height:400px;
+  margin-top: 50px;
 }
 
 #newsletter {
@@ -95,14 +98,14 @@ main {
   width: 317px;
   display: inline-block;
   font-size: .9em;
-  margin-right: 60px;
+  margin-right: 30px;
   padding-top: 5px;
 }
 
 .email-input {
   height: 30px;
   width: 170px;
-  margin-right: 30px;
+  margin-right: 15px;
 }
 
 .button {
@@ -135,6 +138,7 @@ main {
   display: inline-block;
   width: 166px;
   margin-right: 16px;
+  margin-bottom: 50px;
 }
 
 .art-title {
